# goit-pythonweb-hw-12

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 70ad050d0ad2_add_to_model_user_avatar_and_email_.py  9ce12f085fed_add_to_model_user_role.py  c62555d47edc_init.py  d09fac457688_add_user.py
src/conf/: config.py  constants.py
src/core/: depend_service.py  email_token.py  reset_token.py
src/database/: db.py
src/entity/: models.py
src/repositories/: base.py  contacts_repository.py  refresh_token_repository.py  user_repository.py
src/routes/v1/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  password.py  token.py  user.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  user.py
src/templates/: reset_password.html  verify_email.html
src/util/: hash_password.py
src/utils/: hash_password.py
tests/: conftest.py  test_contacts_repository.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_refresh_token_repository.py  test_user_repository.py
